Fix extra space shown below images on archive page.

--- a/src/style.css
+++ b/src/style.css
@@ -884,6 +884,11 @@ form::after {
   text-decoration: none;
 }
 
+.grid-item-image > a {
+  display: block;
+  font-size: 0;
+}
+
 .grid-item .title {
   display: block;
   line-height: 32px;
